@@ -3,8 +3,6 @@ package package_tests
 import (
 	"testing"
 
-	"github.com/fatih/set"
-
 	er "github.com/elastic/apm-server/processor/error"
 	"github.com/elastic/apm-server/tests"
 )
@@ -14,7 +12,6 @@ func TestFields(t *testing.T) {
 		"./../../../_meta/fields.common.yml",
 		"./../_meta/fields.yml",
 	}
-	undocumentedKeys := set.New("context.tags.organization_uuid")
-	tests.TestEventAttrsDocumentedInFields(t, fieldsPaths, er.NewProcessor, undocumentedKeys)
-	tests.TestDocumentedFieldsInEvent(t, fieldsPaths, er.NewProcessor, undocumentedKeys)
+	tests.TestEventAttrsDocumentedInFields(t, fieldsPaths, er.NewProcessor)
+	tests.TestDocumentedFieldsInEvent(t, fieldsPaths, er.NewProcessor)
 }
