@@ -3,8 +3,6 @@ package package_tests
 import (
 	"testing"
 
-	"github.com/fatih/set"
-
 	"github.com/elastic/apm-server/processor/transaction"
 	"github.com/elastic/apm-server/tests"
 )
@@ -14,7 +12,7 @@ func TestEsDocumentation(t *testing.T) {
 		"./../../../_meta/fields.common.yml",
 		"./../_meta/fields.yml",
 	}
-	undocumentedKeys := set.New("context.tags.organization_uuid", "context.sql")
-	tests.TestEventAttrsDocumentedInFields(t, fieldsPaths, transaction.NewProcessor, undocumentedKeys)
-	tests.TestDocumentedFieldsInEvent(t, fieldsPaths, transaction.NewProcessor, undocumentedKeys)
+	processorFn := transaction.NewProcessor
+	tests.TestEventAttrsDocumentedInFields(t, fieldsPaths, processorFn)
+	tests.TestDocumentedFieldsInEvent(t, fieldsPaths, processorFn)
 }
